fix(cm): fix lineWrapping (#90)

--- a/packages/react-runner-codemirror/website/src/App.css
+++ b/packages/react-runner-codemirror/website/src/App.css
@@ -7,16 +7,64 @@
   background-color: whitesmoke;
 }
 
+.App * {
+  box-sizing: border-box;
+}
+
 a {
   color: inherit;
 }
 
-button[aria-selected='true'] {
+.CodeMirror {
+  max-width: 480px;
+  width: 100%;
+  height: 360px;
+}
+
+.Tabs {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 4px;
+}
+
+.Tabs button {
+  border: none;
+  background-color: lightgray;
+}
+
+.Tabs button[aria-selected='true'] {
   background-color: darkgray;
 }
 
-.CodeMirror {
-  max-width: 600px;
-  width: 100%;
-  height: 400px;
+.Tabs .delete {
+  color: gray;
+  cursor: pointer;
+  margin-left: 8px;
+}
+
+.Bar {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 4px;
+  font-size: 12px;
+}
+
+.Bar input[type='number'] {
+  width: 40px;
+  height: 16px;
+}
+
+.Bar label {
+  display: flex;
+  align-items: center;
+}
+
+.Preview {
+  padding: 20px;
+}
+
+.Preview-error {
+  color: red;
 }
